@@ -1,0 +1,24 @@
+<%#
+Opennet Firmware
+
+Copyright 2016 Lars Kruse <devel@sumpfralle.de>
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+	http://www.apache.org/licenses/LICENSE-2.0
+
+-%>
+
+<%+header%>
+
+<%# Protokoll von Gateway-Wechseln %>
+<h2><%:Connection log%></h2>
+<!-- Verbindungslog -->
+<div class="cbi-map"><fieldset class="cbi-section">
+	<textarea xmlns="http://www.w3.org/1999/xhtml" readonly="readonly"
+		rows="10" cols="110" wrap="off"><%=luci.util.pcdata(gateway_log)%></textarea>
+</fieldset></div>
+
+<%+footer%>
